# ML_env

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_notebook.sh
.devcontainer/: devcontainer.json
docker/: Dockerfile
jupyter_settings/: plugin.jupyterlab-settings
