[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Tokuma Suzuki"]

[tool.poetry.dependencies]
python = "~3.8"
scipy = "^1.6.3"
nbdime = "^3.0.0"
google-cloud-storage = "^1.38.0"
neptune-client = "^0.9.7"
neptune-contrib = "^0.27.1"
hydra-core = "^1.0.6"
numpy = "^1.20.2"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
pandas-profiling = "^2.11.0"
scikit-learn = "^0.24.2"
lightgbm = "^3.2.1"
catboost = "^0.25.1"
xgboost = "^1.4.1"
torch = "^1.8.1"
torchvision = "^0.9.1"
torchtext = "^0.9.1"
gensim = "^4.0.1"
transformers = "^4.5.1"
optuna = "^2.7.0"
shap = "^0.39.0"
PyYAML = "^5.4.1"
gcsfs = "^2021.4.0"
isort = "^5.8.0"
flake8 = "^3.9.1"
yapf = "^0.31.0"
openpyxl = "^3.0.7"
tensorboard = "^2.5.0"
jupyterlab = "^3.0.14"
setuptools = "^56.1.0"
psutil = "^5.8.0"
pyarrow = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
